tests/try/given_then.stderr
error: Only "when" or "and_given" are allowed inside "given" section
 --> tests/try/given_then.rs:7:9
  |
7 |         'then_something: {
  |         ^^^^^^^^^^^^^^^
